[gd_scene load_steps=4 format=2]

[ext_resource path="res://Lab.gd" type="Script" id=1]
[ext_resource path="res://Assets/lab1.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14.1853, 20.4848 )

[node name="Lab" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.115509, 1.50166 )
shape = SubResource( 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0.115509, -34.4547 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="BubbleTimer" type="Timer" parent="."]
wait_time = 3.0
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="BubbleTimer" to="." method="_on_BubbleTimer_timeout"]
